--- a/jpa/spring-boot-jpa-/src/main/resources/application.properties
+++ b/jpa/spring-boot-jpa-/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:clientes_db
-spring.datasource.data-username=admin
-spring.datasource.data-password=admin
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_db?useSSL=false
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto= create-drop
+logging.level.org.hibernate.SQL=debug
